src/main/java/org/example/ordersystem/Errors/ResourceNotFoundException.java
package org.example.ordersystem.Errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
